@@ -506,8 +506,6 @@ compare(
 
 } // detail
 
-#if ! GENERATING_DOCS
-
 template<std::size_t N, std::size_t M, class CharT, class Traits>
 bool
 operator==(
@@ -671,8 +669,6 @@ operator>=(
 {
     return detail::compare(lhs, s) >= 0;
 }
-
-#endif
 
 } // beast
 
